--- a/src/app.css
+++ b/src/app.css
@@ -79,7 +79,7 @@
   }
 
   .page-bg {
-    background: linear-gradient(180deg, rgba(11,50,100,0.85) 0%, rgba(11,50,100,1) 100%);
+    background: linear-gradient(180deg, rgba(11, 50, 100, 0.85) 0%, rgba(11, 50, 100, 1) 100%);
   }
 
   .underline-link {
