--- a/src/app.css
+++ b/src/app.css
@@ -78,6 +78,14 @@
     @apply bg-background text-foreground;
   }
 
+  h1 {
+    @apply text-[48px] font-bold;
+  }
+
+  h4 {
+    @apply text-[20px] font-bold;
+  }
+
   .page-bg {
     background: linear-gradient(180deg, rgba(11, 50, 100, 0.85) 0%, rgba(11, 50, 100, 1) 100%);
   }
@@ -88,7 +96,7 @@
 
   .underline-link::after {
     content: "";
-    @apply absolute bottom-[-2px] left-[0px] w-0 h-[2px] bg-link-primary transition-all duration-300 ease-in-out;
+    @apply absolute bottom-[-2px] left-[0px] w-0 h-[2px] bg-blue transition-all duration-300 ease-in-out;
   }
 
   .underline-link:hover::after {
